<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white_color"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal|bottom">

        <TextView
            android:id="@+id/tv_start_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="14pt" />

        <TextView
            android:id="@+id/tv_start_info_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:text="@string/startInfoDescription"
            android:textSize="6.5pt" />

        <TextView
            android:id="@+id/tv_start_info_certificate_load_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:text="@string/startInfoCertificateLoadInfo"
            android:textSize="6.5pt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoadSertificateAsZip"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="0dp"
            android:text="@string/startInfoCertificateLoadButtonAsZip"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorLinkText" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:textSize="6.5pt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoadSertificateAsFolder"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="0dp"
            android:text="@string/startInfoCertificateLoadButtonAsFolder"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorLinkText" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start_info_get_certificate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_marginBottom="10dp"
            android:text="@string/startInfoGetCertificateButton" />
    </LinearLayout>
</LinearLayout>