<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:padding="4dp">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        bind:layout_constraintBottom_toTopOf="@id/cvSendMessage"
        bind:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmptyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/no_messages_yet"
        android:textAlignment="center"
        bind:layout_constraintBottom_toBottomOf="parent"
        bind:layout_constraintTop_toTopOf="parent"

        />

    <LinearLayout
        android:id="@+id/cvSendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        bind:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/btnAddFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/attach_file"

            android:src="@drawable/ic_add_24px" />

        <EditText
            android:id="@+id/et_chat_message_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/message_text"
            android:inputType="textLongMessage"
            android:nextFocusLeft="@id/et_chat_message_input"
            android:nextFocusUp="@id/et_chat_message_input"

            />

        <ImageButton
            android:id="@+id/btnSendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/send_message"
            android:src="@drawable/ic_send_24px" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

