<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/cvPassowrd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_selected_certificate_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/selected_certificate" />

        <TextView
            android:id="@+id/tv_selected_certificate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="getSelectedCertificateClient"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Имя сертификата" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="@string/password"

            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cert_validation_login"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/login" />
    </LinearLayout>
</FrameLayout>
